# cascade-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cascade/: __init__.py  cascade_routing.py  cascade_sim.py  server.py
examples/: price_estimate_clash.py
scripts/: audit_cherrypick.py  gen_agent_logs.py  validate_logs.py
tests/: e2e_local_swarm.py  test_agent_logs.py  test_mcp_wrapper.py  test_router_unit.py
