[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cascade-mcp"
version = "0.1.0"
description = "Cascade-resolution routing for concurrent multi-agent writes, exposed as an MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Pedro Clemente-Turrubiates" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "agents",
    "occ",
    "conflict-resolution",
    "routing",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
cascade-mcp = "cascade.server:cli"

[project.urls]
Homepage = "https://github.com/clemente-turrubiates/cascade-mcp"
Repository = "https://github.com/clemente-turrubiates/cascade-mcp"

[tool.hatch.build.targets.wheel]
packages = ["cascade"]

[tool.hatch.build.targets.sdist]
include = [
    "cascade",
    "scripts",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
