[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cascade-mcp"
version = "0.3.1"
description = "Cascade-resolution routing for concurrent multi-agent writes, exposed as an MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Pedro Clemente-Turrubiates" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "agents",
    "occ",
    "conflict-resolution",
    "routing",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
]

[project.scripts]
cascade-mcp = "cascade.server:cli"

[project.urls]
Homepage = "https://github.com/clemente-turrubiates/cascade-mcp"
Repository = "https://github.com/clemente-turrubiates/cascade-mcp"

[tool.hatch.build.targets.wheel]
packages = ["cascade"]

[tool.hatch.build.targets.sdist]
include = [
    "cascade",
    "scripts",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Enable: bugs (B), imports (I), simplification (SIM), unused (F)
select = ["E", "F", "I", "B", "SIM", "W"]
# cascade_routing uses compact one-liner style (semicolons in dataclasses,
# inline if/return guards) by design; E741 (ambiguous var), E701/E702
# (multiple statements on one line) are noise against that style.
# E402 (module import not at top) is required for test files that
# manipulate sys.path before importing the package.
ignore = ["E741", "E701", "E702", "E402"]

[tool.ruff.lint.per-file-ignores]
# sim/test files use longer lines and inline magic; don't fight them
"cascade/cascade_sim.py" = ["E501"]
"tests/*" = ["E501", "E722", "B023"]
"scripts/*" = ["E501", "B023"]
"tests/test_mcp_wrapper.py" = ["SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
